feat(calculator): add thousands separator formatting for calculation results and update copy actions, close #4299

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -461,7 +461,8 @@
   "plugin_backup_error": "Erro",
   "plugin_backup_restore": "Restaurar",
   "plugin_backup_restore_success": "Configurações do Wox restauradas",
-  "plugin_calculator_copy_result": "Copiar resultado",
+  "plugin_calculator_copy_result": "Copiar (sem separador de milhares)",
+  "plugin_calculator_copy_result_with_thousands_separator": "Copiar",
   "plugin_calculator_recalculate": "Recalcular",
   "plugin_calculator_input_expression": "Digite a expressão para calcular",
   "plugin_emoji_copy": "Copiar emoji",
