--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -461,7 +461,8 @@
   "plugin_backup_error": "Ошибка",
   "plugin_backup_restore": "Восстановить",
   "plugin_backup_restore_success": "Настройки Wox восстановлены",
-  "plugin_calculator_copy_result": "Копировать результат",
+  "plugin_calculator_copy_result": "Копировать (без разделителя тысяч)",
+  "plugin_calculator_copy_result_with_thousands_separator": "Копировать",
   "plugin_calculator_recalculate": "Пересчитать",
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
   "plugin_emoji_copy": "Копировать эмодзи",
