--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -468,7 +468,8 @@
   "plugin_backup_error": "错误",
   "plugin_backup_restore": "恢复",
   "plugin_backup_restore_success": "Wox 设置已恢复",
-  "plugin_calculator_copy_result": "复制结果",
+  "plugin_calculator_copy_result": "复制(不带千分位)",
+  "plugin_calculator_copy_result_with_thousands_separator": "复制",
   "plugin_calculator_recalculate": "重新计算",
   "plugin_calculator_input_expression": "输入表达式进行计算",
   "plugin_emoji_copy": "复制表情",
