--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -467,7 +467,8 @@
   "plugin_backup_error": "Error",
   "plugin_backup_restore": "Restore",
   "plugin_backup_restore_success": "Wox settings restored",
-  "plugin_calculator_copy_result": "Copy result",
+  "plugin_calculator_copy_result": "Copy (without thousands separator)",
+  "plugin_calculator_copy_result_with_thousands_separator": "Copy",
   "plugin_calculator_recalculate": "Recalculate",
   "plugin_calculator_input_expression": "Input expression to calculate",
   "plugin_emoji_copy": "Copy emoji",
