--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -476,6 +476,7 @@
   "plugin_emoji_remove_frequently_used": "Remove from frequently used",
   "plugin_emoji_frequently_used": "Frequently Used",
   "plugin_emoji_all": "Emojis",
+  "plugin_converter_copy_result": "Copy",
   "plugin_file_open": "Open",
   "plugin_file_open_containing_folder": "Open containing folder",
   "plugin_file_show_context_menu": "Show system context menu",
