--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -477,6 +477,7 @@
   "plugin_emoji_remove_frequently_used": "从常用中移除",
   "plugin_emoji_frequently_used": "常用",
   "plugin_emoji_all": "全部表情",
+  "plugin_converter_copy_result": "复制",
   "plugin_file_open": "打开",
   "plugin_file_open_containing_folder": "打开所在文件夹",
   "plugin_file_show_context_menu": "显示系统右键菜单",
