refactor(i18n): Add internationalization support for various plugins
- Updated plugin metadata to use i18n keys for names and descriptions across multiple plugins including Clipboard, Converter, Doctor, Emoji, File, Indicator, Media Player, Menus, Plugin Installer, Query History, Selection, Shell, System Commands, Theme Manager, URL, Web Search, and Wox Plugin Manager.
- Added corresponding i18n keys in English, Portuguese, Russian, and Chinese language files to ensure proper localization.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -251,6 +251,54 @@
   "ui_theme_preview_text_5": "Customizable and extensible launcher",
   "ui_theme_preview_subtitle": "Wox Feature {index}",
   "ui_theme_preview_open": "Open",
+  "plugin_ai_chat_plugin_name": "AI Chat",
+  "plugin_ai_chat_plugin_description": "Chat with AI",
+  "plugin_ai_command_plugin_name": "AI Commands",
+  "plugin_app_plugin_name": "Apps",
+  "plugin_app_plugin_description": "Search apps installed on your computer",
+  "plugin_backup_plugin_name": "Backup and Restore",
+  "plugin_backup_plugin_description": "Backup and restore Wox settings",
+  "plugin_browser_plugin_name": "Browser",
+  "plugin_browser_plugin_description": "Get opened browser tabs and active URL",
+  "plugin_browser_bookmark_plugin_name": "Browser Bookmarks",
+  "plugin_browser_bookmark_plugin_description": "Search browser bookmarks",
+  "plugin_calculator_plugin_name": "Calculator",
+  "plugin_calculator_plugin_description": "Calculator for Wox",
+    "plugin_clipboard_plugin_name": "Clipboard History",
+    "plugin_clipboard_plugin_description": "Clipboard history for Wox",
+    "plugin_clipboard_command_fav_description": "List favorite clipboard history",
+    "plugin_converter_plugin_name": "Converter",
+  "plugin_converter_plugin_description": "Convert units, currencies, time and more",
+  "plugin_doctor_plugin_name": "Wox Doctor",
+  "plugin_doctor_plugin_description": "Check your system and Wox settings",
+  "plugin_emoji_plugin_name": "Emoji",
+  "plugin_emoji_plugin_description": "Search and copy emojis",
+  "plugin_file_plugin_name": "Files",
+  "plugin_file_plugin_description": "Search files in your computer",
+  "plugin_indicator_plugin_name": "System Plugin Indicator",
+  "plugin_indicator_plugin_description": "Indicator for plugin trigger keywords",
+  "plugin_media_player_plugin_name": "Media Player",
+  "plugin_media_player_plugin_description": "Get information about currently playing media",
+  "plugin_menus_plugin_name": "macOS Menus",
+  "plugin_menus_plugin_description": "Search menus for current active application",
+  "plugin_plugin_installer_plugin_name": "Wox Plugin Installer",
+  "plugin_plugin_installer_plugin_description": "Install Wox plugins",
+  "plugin_query_history_plugin_name": "Wox Query History",
+  "plugin_query_history_plugin_description": "Query histories for Wox",
+  "plugin_selection_plugin_name": "Selection",
+  "plugin_selection_plugin_description": "Wox default actions for selection query",
+  "plugin_shell_plugin_name": "Shell",
+  "plugin_shell_plugin_description": "Execute shell commands directly from Wox",
+  "plugin_sys_plugin_name": "System Commands",
+  "plugin_sys_plugin_description": "Provide system related commands (shutdown, lock, settings, etc.)",
+  "plugin_theme_plugin_name": "Theme Manager",
+  "plugin_theme_plugin_description": "Manage themes and generate with AI",
+  "plugin_url_plugin_name": "URL",
+  "plugin_url_plugin_description": "Open the typed URL from Wox",
+  "plugin_websearch_plugin_name": "Web Search",
+  "plugin_websearch_plugin_description": "Provide web search capability",
+  "plugin_wpm_plugin_name": "Wox Plugin Manager",
+  "plugin_wpm_plugin_description": "Plugin manager for Wox",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
@@ -366,7 +414,7 @@
   "plugin_menus_execute": "Execute",
   "plugin_wpm_please_wait": "Please wait...",
   "plugin_wpm_create_plugin": "Create %s plugin",
-  "plugin_wpm_plugin_name": "Name: %s",
+  "plugin_wpm_create_plugin_name": "Name: %s",
   "plugin_wpm_create": "Create",
   "plugin_wpm_uninstall": "Uninstall",
   "plugin_wpm_install": "Install",
