--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -249,6 +249,54 @@
   "ui_theme_preview_text_5": "Lançador personalizável e extensível",
   "ui_theme_preview_subtitle": "Recurso Wox {index}",
   "ui_theme_preview_open": "Abrir",
+  "plugin_ai_chat_plugin_name": "Chat com IA",
+  "plugin_ai_chat_plugin_description": "Converse com IA",
+  "plugin_ai_command_plugin_name": "Comandos de IA",
+  "plugin_app_plugin_name": "Aplicativos",
+  "plugin_app_plugin_description": "Pesquisar aplicativos instalados no seu computador",
+  "plugin_backup_plugin_name": "Backup e restauração",
+  "plugin_backup_plugin_description": "Fazer backup e restaurar as configurações do Wox",
+  "plugin_browser_plugin_name": "Navegador",
+  "plugin_browser_plugin_description": "Obter abas abertas do navegador e URL ativa",
+  "plugin_browser_bookmark_plugin_name": "Favoritos do navegador",
+  "plugin_browser_bookmark_plugin_description": "Pesquisar favoritos do navegador",
+  "plugin_calculator_plugin_name": "Calculadora",
+  "plugin_calculator_plugin_description": "Calculadora para Wox",
+  "plugin_clipboard_plugin_name": "Histórico da área de transferência",
+  "plugin_clipboard_plugin_description": "Histórico da área de transferência para Wox",
+  "plugin_clipboard_command_fav_description": "Listar histórico favorito da área de transferência",
+  "plugin_converter_plugin_name": "Conversor",
+  "plugin_converter_plugin_description": "Converter unidades, moedas, tempo e mais",
+  "plugin_doctor_plugin_name": "Wox Doctor",
+  "plugin_doctor_plugin_description": "Verificar seu sistema e as configurações do Wox",
+  "plugin_emoji_plugin_name": "Emoji",
+  "plugin_emoji_plugin_description": "Pesquisar e copiar emojis",
+  "plugin_file_plugin_name": "Arquivos",
+  "plugin_file_plugin_description": "Pesquisar arquivos no seu computador",
+  "plugin_indicator_plugin_name": "Indicador de plugins do sistema",
+  "plugin_indicator_plugin_description": "Indicador para palavras-chave de ativação de plugins",
+  "plugin_media_player_plugin_name": "Reprodutor de mídia",
+  "plugin_media_player_plugin_description": "Obter informações sobre a mídia em reprodução",
+  "plugin_menus_plugin_name": "Menus do macOS",
+  "plugin_menus_plugin_description": "Pesquisar menus do aplicativo ativo atual",
+  "plugin_plugin_installer_plugin_name": "Instalador de Plugins do Wox",
+  "plugin_plugin_installer_plugin_description": "Instalar plugins do Wox",
+  "plugin_query_history_plugin_name": "Histórico de consulta do Wox",
+  "plugin_query_history_plugin_description": "Histórico de consultas do Wox",
+  "plugin_selection_plugin_name": "Seleção",
+  "plugin_selection_plugin_description": "Ações padrão do Wox para consulta de seleção",
+  "plugin_shell_plugin_name": "Shell",
+  "plugin_shell_plugin_description": "Executar comandos de shell diretamente do Wox",
+  "plugin_sys_plugin_name": "Comandos do sistema",
+  "plugin_sys_plugin_description": "Fornece comandos do sistema (desligar, bloquear, configurações etc.)",
+  "plugin_theme_plugin_name": "Gerenciador de temas",
+  "plugin_theme_plugin_description": "Gerenciar temas e gerar com IA",
+  "plugin_url_plugin_name": "URL",
+  "plugin_url_plugin_description": "Abrir a URL digitada no Wox",
+  "plugin_websearch_plugin_name": "Pesquisa na Web",
+  "plugin_websearch_plugin_description": "Fornece capacidade de pesquisa na web",
+  "plugin_wpm_plugin_name": "Gerenciador de Plugins do Wox",
+  "plugin_wpm_plugin_description": "Gerenciador de plugins para Wox",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
@@ -360,7 +408,7 @@
   "plugin_menus_execute": "Executar",
   "plugin_wpm_please_wait": "Por favor, aguarde...",
   "plugin_wpm_create_plugin": "Criar plugin %s",
-  "plugin_wpm_plugin_name": "Nome: %s",
+  "plugin_wpm_create_plugin_name": "Nome: %s",
   "plugin_wpm_create": "Criar",
   "plugin_wpm_uninstall": "Desinstalar",
   "plugin_wpm_install": "Instalar",
