--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -249,6 +249,54 @@
   "ui_theme_preview_text_5": "Настраиваемый и расширяемый лаунчер",
   "ui_theme_preview_subtitle": "Функция Wox {index}",
   "ui_theme_preview_open": "Открыть",
+  "plugin_ai_chat_plugin_name": "Чат с ИИ",
+  "plugin_ai_chat_plugin_description": "Общайтесь с ИИ",
+  "plugin_ai_command_plugin_name": "Команды ИИ",
+  "plugin_app_plugin_name": "Приложения",
+  "plugin_app_plugin_description": "Поиск установленных приложений на компьютере",
+  "plugin_backup_plugin_name": "Резервное копирование и восстановление",
+  "plugin_backup_plugin_description": "Резервное копирование и восстановление настроек Wox",
+  "plugin_browser_plugin_name": "Браузер",
+  "plugin_browser_plugin_description": "Получать открытые вкладки браузера и активный URL",
+  "plugin_browser_bookmark_plugin_name": "Закладки браузера",
+  "plugin_browser_bookmark_plugin_description": "Поиск закладок браузера",
+  "plugin_calculator_plugin_name": "Калькулятор",
+  "plugin_calculator_plugin_description": "Калькулятор для Wox",
+  "plugin_clipboard_plugin_name": "История буфера обмена",
+  "plugin_clipboard_plugin_description": "История буфера обмена для Wox",
+  "plugin_clipboard_command_fav_description": "Показать избранную историю буфера обмена",
+  "plugin_converter_plugin_name": "Конвертер",
+  "plugin_converter_plugin_description": "Конвертация единиц, валют, времени и др.",
+  "plugin_doctor_plugin_name": "Доктор Wox",
+  "plugin_doctor_plugin_description": "Проверка системы и настроек Wox",
+  "plugin_emoji_plugin_name": "Эмодзи",
+  "plugin_emoji_plugin_description": "Поиск и копирование эмодзи",
+  "plugin_file_plugin_name": "Файлы",
+  "plugin_file_plugin_description": "Поиск файлов на вашем компьютере",
+  "plugin_indicator_plugin_name": "Индикатор системных плагинов",
+  "plugin_indicator_plugin_description": "Индикатор для ключевых слов плагинов",
+  "plugin_media_player_plugin_name": "Медиаплеер",
+  "plugin_media_player_plugin_description": "Информация о воспроизводимом медиа",
+  "plugin_menus_plugin_name": "Меню macOS",
+  "plugin_menus_plugin_description": "Поиск меню активного приложения",
+  "plugin_plugin_installer_plugin_name": "Установщик плагинов Wox",
+  "plugin_plugin_installer_plugin_description": "Установка плагинов Wox",
+  "plugin_query_history_plugin_name": "История запросов Wox",
+  "plugin_query_history_plugin_description": "История запросов Wox",
+  "plugin_selection_plugin_name": "Выделение",
+  "plugin_selection_plugin_description": "Действия Wox по умолчанию для запроса выделения",
+  "plugin_shell_plugin_name": "Shell",
+  "plugin_shell_plugin_description": "Выполнение команд shell прямо из Wox",
+  "plugin_sys_plugin_name": "Системные команды",
+  "plugin_sys_plugin_description": "Системные команды (выключение, блокировка, настройки и т. д.)",
+  "plugin_theme_plugin_name": "Менеджер тем",
+  "plugin_theme_plugin_description": "Управление темами и генерация с ИИ",
+  "plugin_url_plugin_name": "URL",
+  "plugin_url_plugin_description": "Открыть введённый URL из Wox",
+  "plugin_websearch_plugin_name": "Веб-поиск",
+  "plugin_websearch_plugin_description": "Возможность веб-поиска",
+  "plugin_wpm_plugin_name": "Менеджер плагинов Wox",
+  "plugin_wpm_plugin_description": "Менеджер плагинов для Wox",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
@@ -360,7 +408,7 @@
   "plugin_menus_execute": "Выполнить",
   "plugin_wpm_please_wait": "Пожалуйста, подождите...",
   "plugin_wpm_create_plugin": "Создать плагин %s",
-  "plugin_wpm_plugin_name": "Название: %s",
+  "plugin_wpm_create_plugin_name": "Название: %s",
   "plugin_wpm_create": "Создать",
   "plugin_wpm_uninstall": "Удалить",
   "plugin_wpm_install": "Установить",
