--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -251,6 +251,54 @@
   "ui_theme_preview_text_5": "可定制和可扩展的启动器",
   "ui_theme_preview_subtitle": "Wox 功能 {index}",
   "ui_theme_preview_open": "打开",
+  "plugin_ai_chat_plugin_name": "AI 聊天",
+  "plugin_ai_chat_plugin_description": "与 AI 聊天",
+  "plugin_ai_command_plugin_name": "AI 命令",
+  "plugin_app_plugin_name": "应用",
+  "plugin_app_plugin_description": "搜索电脑上安装的应用",
+  "plugin_backup_plugin_name": "备份与恢复",
+  "plugin_backup_plugin_description": "备份和恢复 Wox 设置",
+  "plugin_browser_plugin_name": "浏览器",
+  "plugin_browser_plugin_description": "获取已打开的浏览器标签页和当前 URL",
+  "plugin_browser_bookmark_plugin_name": "浏览器书签",
+  "plugin_browser_bookmark_plugin_description": "搜索浏览器书签",
+  "plugin_calculator_plugin_name": "计算器",
+  "plugin_calculator_plugin_description": "Wox 计算器",
+  "plugin_clipboard_plugin_name": "剪切板历史",
+  "plugin_clipboard_plugin_description": "Wox 的剪切板历史",
+  "plugin_clipboard_command_fav_description": "列出收藏的剪贴板历史",
+  "plugin_converter_plugin_name": "转换器",
+  "plugin_converter_plugin_description": "单位、货币、时间等转换",
+  "plugin_doctor_plugin_name": "Wox 诊断",
+  "plugin_doctor_plugin_description": "检查系统和 Wox 设置",
+  "plugin_emoji_plugin_name": "表情符号",
+  "plugin_emoji_plugin_description": "搜索并复制表情符号",
+  "plugin_file_plugin_name": "文件",
+  "plugin_file_plugin_description": "搜索电脑中的文件",
+  "plugin_indicator_plugin_name": "系统插件指示器",
+  "plugin_indicator_plugin_description": "用于插件触发关键字的指示器",
+  "plugin_media_player_plugin_name": "媒体播放器",
+  "plugin_media_player_plugin_description": "获取当前播放的媒体信息",
+  "plugin_menus_plugin_name": "macOS 菜单",
+  "plugin_menus_plugin_description": "搜索当前活动应用的菜单",
+  "plugin_plugin_installer_plugin_name": "Wox 插件安装器",
+  "plugin_plugin_installer_plugin_description": "用于安装本地Wox插件",
+  "plugin_query_history_plugin_name": "Wox 查询历史",
+  "plugin_query_history_plugin_description": "Wox 的查询历史",
+  "plugin_selection_plugin_name": "选中内容",
+  "plugin_selection_plugin_description": "选中查询的默认操作",
+  "plugin_shell_plugin_name": "Shell",
+  "plugin_shell_plugin_description": "在 Wox 中直接执行 Shell 命令",
+  "plugin_sys_plugin_name": "系统命令",
+  "plugin_sys_plugin_description": "提供系统相关命令（关机、锁定、设置等）",
+  "plugin_theme_plugin_name": "主题管理",
+  "plugin_theme_plugin_description": "管理主题并支持 AI 生成",
+  "plugin_url_plugin_name": "网址",
+  "plugin_url_plugin_description": "从 Wox 打开输入的 URL",
+  "plugin_websearch_plugin_name": "网页搜索",
+  "plugin_websearch_plugin_description": "提供网页搜索能力",
+  "plugin_wpm_plugin_name": "Wox 插件管理器",
+  "plugin_wpm_plugin_description": "Wox 的插件管理器, 安装在线插件或创建新插件",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
@@ -367,7 +415,7 @@
   "plugin_menus_execute": "执行",
   "plugin_wpm_please_wait": "请稍候...",
   "plugin_wpm_create_plugin": "创建 %s 插件",
-  "plugin_wpm_plugin_name": "名称：%s",
+  "plugin_wpm_create_plugin_name": "名称：%s",
   "plugin_wpm_create": "创建",
   "plugin_wpm_uninstall": "卸载",
   "plugin_wpm_install": "安装",
