feat(plugin): enhance plugin management with directory support and improve string matching functions

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -139,6 +139,7 @@
   "ui_plugin_author": "Author",
   "ui_plugin_runtime": "Runtime",
   "ui_plugin_website": "Website",
+  "ui_plugin_open_directory": "Open directory",
   "ui_plugin_dev_tag": "dev",
   "ui_plugin_uninstall": "Uninstall",
   "ui_plugin_installing": "Installing...",
