--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -137,6 +137,7 @@
   "ui_plugin_author": "Автор",
   "ui_plugin_runtime": "Рантайм",
   "ui_plugin_website": "Сайт",
+  "ui_plugin_open_directory": "Открыть папку",
   "ui_plugin_dev_tag": "dev",
   "ui_plugin_uninstall": "Удалить",
   "ui_plugin_installing": "Установка...",
