feat(ui): Enhance plugin settings and UI with new features and improvements
- Added `PreventHideAfterAction` to uninstall action in WPM plugin.
- Updated English, Portuguese, Russian, and Chinese language files with new tips for trigger keywords and commands.
- Implemented `DeleteAll` method in `PluginSettingStore` to remove all settings for a specific plugin.
- Refactored `WoxSettingController` to improve logging and code readability.
- Introduced `WoxHintBox` component for displaying hints in the UI.
- Enhanced `WoxSettingPluginView` to include hints for trigger keywords and commands.
- Added unit tests for `DeleteAll` method in `PluginSettingStore`.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -166,6 +166,8 @@
   "ui_plugin_privacy_llm_desc": "This plugin uses large language model to provide better results, you need to configure the model in LLM Tools plugin first",
   "ui_plugin_trigger_keyword_column": "Keyword",
   "ui_plugin_trigger_keyword_tooltip": "The keyword that triggers this plugin. * presents no keyword, any input will trigger this plugin.",
+  "ui_plugin_trigger_keywords_tip": "Trigger keywords are prefixes you type in Wox to activate this plugin. Use \"*\" to make it global (no keyword).",
+  "ui_plugin_commands_tip": "Commands are sub-commands after the trigger keyword. Type \"<trigger> <command> \" (note the trailing space) to enter command mode.",
   "ui_plugin_command_name_column": "Name",
   "ui_plugin_command_desc_column": "Description",
   "ui_setting_plugin_system_tag": "System",
