--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -164,6 +164,8 @@
   "ui_plugin_privacy_llm_desc": "Этот плагин использует большую языковую модель для предоставления лучших результатов, вам нужно настроить модель в плагине LLM Tools",
   "ui_plugin_trigger_keyword_column": "Ключевое слово",
   "ui_plugin_trigger_keyword_tooltip": "Ключевое слово, которое активирует этот плагин. * означает отсутствие ключевого слова, любой ввод активирует этот плагин.",
+  "ui_plugin_trigger_keywords_tip": "Ключевые слова запуска — это префиксы, которые вы вводите в Wox, чтобы активировать плагин. Используйте \"*\", чтобы сделать его глобальным (без ключевого слова).",
+  "ui_plugin_commands_tip": "Команды — это подкоманды после ключевого слова запуска. Введите \"<триггер> <команда> \" (обратите внимание на пробел в конце), чтобы перейти в режим команд.",
   "ui_plugin_command_name_column": "Название",
   "ui_plugin_command_desc_column": "Описание",
   "ui_setting_plugin_system_tag": "Система",
