--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -166,6 +166,8 @@
   "ui_plugin_privacy_llm_desc": "此插件使用大语言模型来提供更好的结果，你需要先在 LLM Tools 插件中配置模型",
   "ui_plugin_trigger_keyword_column": "关键词",
   "ui_plugin_trigger_keyword_tooltip": "触发此插件的关键词。* 表示无关键词，任何输入都会触发此插件。",
+  "ui_plugin_trigger_keywords_tip": "触发关键词是你在 Wox 输入框里输入的前缀，用来激活此插件。使用 \"*\" 表示全局（无需关键词）。",
+  "ui_plugin_commands_tip": "命令是触发关键词后面的子命令。输入 \"<触发关键词> <命令> \"（注意末尾空格）进入命令模式。",
   "ui_plugin_command_name_column": "名称",
   "ui_plugin_command_desc_column": "描述",
   "ui_setting_plugin_system_tag": "系统",
@@ -265,8 +267,8 @@
   "plugin_browser_bookmark_plugin_description": "搜索浏览器书签",
   "plugin_calculator_plugin_name": "计算器",
   "plugin_calculator_plugin_description": "Wox 计算器",
-  "plugin_clipboard_plugin_name": "剪切板历史",
-  "plugin_clipboard_plugin_description": "Wox 的剪切板历史",
+  "plugin_clipboard_plugin_name": "剪贴板历史",
+  "plugin_clipboard_plugin_description": "Wox 的剪贴板历史",
   "plugin_clipboard_command_fav_description": "列出收藏的剪贴板历史",
   "plugin_converter_plugin_name": "转换器",
   "plugin_converter_plugin_description": "单位、货币、时间等转换",
