feat(ui): enhance chat input focus behavior and update related UI elements

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -267,10 +267,10 @@
   "plugin_browser_bookmark_plugin_description": "Search browser bookmarks",
   "plugin_calculator_plugin_name": "Calculator",
   "plugin_calculator_plugin_description": "Calculator for Wox",
-    "plugin_clipboard_plugin_name": "Clipboard History",
-    "plugin_clipboard_plugin_description": "Clipboard history for Wox",
-    "plugin_clipboard_command_fav_description": "List favorite clipboard history",
-    "plugin_converter_plugin_name": "Converter",
+  "plugin_clipboard_plugin_name": "Clipboard History",
+  "plugin_clipboard_plugin_description": "Clipboard history for Wox",
+  "plugin_clipboard_command_fav_description": "List favorite clipboard history",
+  "plugin_converter_plugin_name": "Converter",
   "plugin_converter_plugin_description": "Convert units, currencies, time and more",
   "plugin_doctor_plugin_name": "Wox Doctor",
   "plugin_doctor_plugin_description": "Check your system and Wox settings",
@@ -571,12 +571,12 @@
   "plugin_ai_chat_default_model": "Default Model",
   "plugin_ai_chat_default_model_tooltip": "The default model to use for this command",
   "plugin_ai_chat_enable_fallback_search": "Fallback Search",
-  "plugin_ai_chat_enable_fallback_search_tooltip": "When enabled, if the query result is empty, Wox will return a result of 'use AI Chat for %s'",
+  "plugin_ai_chat_enable_fallback_search_tooltip": "When enabled, if the query result is empty, Wox will return a result of 'use AI Chat for <query>'",
   "plugin_app_open_failed_description": "Failed to open: %s",
   "plugin_ai_chat_fallback_search_chat_for": "Use AI Chat for %s",
   "plugin_ai_chat_start_chat": "Start Chat",
-  "plugin_ai_chat_enable_auto_focus_to_chat_input": "Auto focus to chat input when open with query hotkey",
-  "plugin_ai_chat_enable_auto_focus_to_chat_input_tooltip": "When enabled, Wox will automatically focus to chat input when open with query hotkey, this will enable you to type your query immediately",
+  "plugin_ai_chat_query_focus": "Query Focus",
+  "plugin_ai_chat_query_focus_tooltip": "When enabled, automatically focus the chat input box and collapse the sidebar when opening chat via a query.",
   "plugin_mediaplayer_toggle": "Play/Pause",
   "plugin_mediaplayer_copy_info": "Copy info",
   "plugin_mediaplayer_no_media": "No media",
@@ -632,5 +632,7 @@
   "plugin_emoji_add_keyword": "Add keyword",
   "plugin_emoji_add_keyword_label": "Keyword",
   "plugin_emoji_add_keyword_hint": "Add custom keywords to help you find this emoji faster, separate multiple with commas.",
-  "ui_not_supported_field": "Field type not supported"
+  "ui_not_supported_field": "Field type not supported",
+  "ui_ai_chat_show_sidebar": "Show Sidebar",
+  "ui_ai_chat_hide_sidebar": "Hide Sidebar"
 }
