feat(app): add Windows Settings integration and enhance app querying logic

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -308,6 +308,18 @@
   "plugin_app_terminate": "Terminate",
   "plugin_app_cpu": "CPU",
   "plugin_app_memory": "Mem",
+  "plugin_app_windows_settings_subtitle": "Windows Settings",
+  "plugin_app_windows_settings_system": "System",
+  "plugin_app_windows_settings_bluetooth": "Bluetooth & devices",
+  "plugin_app_windows_settings_network": "Network & internet",
+  "plugin_app_windows_settings_personalization": "Personalization",
+  "plugin_app_windows_settings_apps": "Apps",
+  "plugin_app_windows_settings_accounts": "Accounts",
+  "plugin_app_windows_settings_time_language": "Time & language",
+  "plugin_app_windows_settings_gaming": "Gaming",
+  "plugin_app_windows_settings_accessibility": "Accessibility",
+  "plugin_app_windows_settings_privacy_security": "Privacy & security",
+  "plugin_app_windows_settings_windows_update": "Windows Update",
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
