--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -306,6 +306,18 @@
   "plugin_app_terminate": "Encerrar",
   "plugin_app_cpu": "CPU",
   "plugin_app_memory": "Mem",
+  "plugin_app_windows_settings_subtitle": "Configurações do Windows",
+  "plugin_app_windows_settings_system": "Sistema",
+  "plugin_app_windows_settings_bluetooth": "Bluetooth e dispositivos",
+  "plugin_app_windows_settings_network": "Rede e Internet",
+  "plugin_app_windows_settings_personalization": "Personalização",
+  "plugin_app_windows_settings_apps": "Aplicativos",
+  "plugin_app_windows_settings_accounts": "Contas",
+  "plugin_app_windows_settings_time_language": "Hora e idioma",
+  "plugin_app_windows_settings_gaming": "Jogos",
+  "plugin_app_windows_settings_accessibility": "Acessibilidade",
+  "plugin_app_windows_settings_privacy_security": "Privacidade e segurança",
+  "plugin_app_windows_settings_windows_update": "Windows Update",
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
   "plugin_clipboard_copy_date": "Copiar data",
   "plugin_clipboard_copy_characters": "Copiar caracteres",
