--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -309,6 +309,18 @@
   "plugin_app_open_failed_description": "打开失败：%s",
   "plugin_app_cpu": "CPU",
   "plugin_app_memory": "内存",
+  "plugin_app_windows_settings_subtitle": "Windows 设置",
+  "plugin_app_windows_settings_system": "系统",
+  "plugin_app_windows_settings_bluetooth": "蓝牙和设备",
+  "plugin_app_windows_settings_network": "网络和 Internet",
+  "plugin_app_windows_settings_personalization": "个性化",
+  "plugin_app_windows_settings_apps": "应用",
+  "plugin_app_windows_settings_accounts": "帐户",
+  "plugin_app_windows_settings_time_language": "时间和语言",
+  "plugin_app_windows_settings_gaming": "游戏",
+  "plugin_app_windows_settings_accessibility": "辅助功能",
+  "plugin_app_windows_settings_privacy_security": "隐私和安全性",
+  "plugin_app_windows_settings_windows_update": "Windows 更新",
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
