--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -306,6 +306,18 @@
   "plugin_app_terminate": "Завершить",
   "plugin_app_cpu": "ЦП",
   "plugin_app_memory": "Память",
+  "plugin_app_windows_settings_subtitle": "Параметры Windows",
+  "plugin_app_windows_settings_system": "Система",
+  "plugin_app_windows_settings_bluetooth": "Bluetooth и устройства",
+  "plugin_app_windows_settings_network": "Сеть и Интернет",
+  "plugin_app_windows_settings_personalization": "Персонализация",
+  "plugin_app_windows_settings_apps": "Приложения",
+  "plugin_app_windows_settings_accounts": "Учетные записи",
+  "plugin_app_windows_settings_time_language": "Время и язык",
+  "plugin_app_windows_settings_gaming": "Игры",
+  "plugin_app_windows_settings_accessibility": "Специальные возможности",
+  "plugin_app_windows_settings_privacy_security": "Конфиденциальность и безопасность",
+  "plugin_app_windows_settings_windows_update": "Центр обновления Windows",
   "plugin_browser_bookmark_open_in_browser": "Открыть в браузере",
   "plugin_clipboard_copy_date": "Копировать дату",
   "plugin_clipboard_copy_characters": "Копировать символы",
