feat(backup): enhance backup and restore functionality with user notifications and folder access

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -529,7 +529,8 @@
   "plugin_backup_success": "Wox settings backed up",
   "plugin_backup_error": "Error",
   "plugin_backup_restore": "Restore",
-  "plugin_backup_restore_success": "Wox settings restored",
+  "plugin_backup_restore_success": "Restore completed. Wox will exit now; please restart.",
+  "plugin_backup_open_backup_folder": "Open backup folder",
   "plugin_calculator_copy_result": "Copy (without thousands separator)",
   "plugin_calculator_copy_result_with_thousands_separator": "Copy",
   "plugin_calculator_recalculate": "Recalculate",
