--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -523,7 +523,8 @@
   "plugin_backup_success": "Configurações do Wox salvas com sucesso",
   "plugin_backup_error": "Erro",
   "plugin_backup_restore": "Restaurar",
-  "plugin_backup_restore_success": "Configurações do Wox restauradas",
+  "plugin_backup_restore_success": "Restauração concluída. O Wox será encerrado agora; reinicie o aplicativo.",
+  "plugin_backup_open_backup_folder": "Abrir pasta de backup",
   "plugin_calculator_copy_result": "Copiar (sem separador de milhares)",
   "plugin_calculator_copy_result_with_thousands_separator": "Copiar",
   "plugin_calculator_recalculate": "Recalcular",
