--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -523,7 +523,8 @@
   "plugin_backup_success": "Настройки Wox сохранены",
   "plugin_backup_error": "Ошибка",
   "plugin_backup_restore": "Восстановить",
-  "plugin_backup_restore_success": "Настройки Wox восстановлены",
+  "plugin_backup_restore_success": "Восстановление завершено. Wox сейчас закроется — перезапустите приложение.",
+  "plugin_backup_open_backup_folder": "Открыть папку резервных копий",
   "plugin_calculator_copy_result": "Копировать (без разделителя тысяч)",
   "plugin_calculator_copy_result_with_thousands_separator": "Копировать",
   "plugin_calculator_recalculate": "Пересчитать",
