--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -530,7 +530,8 @@
   "plugin_backup_success": "Wox 设置已备份",
   "plugin_backup_error": "错误",
   "plugin_backup_restore": "恢复",
-  "plugin_backup_restore_success": "Wox 设置已恢复",
+  "plugin_backup_restore_success": "恢复完成。Wox 将自动退出，请重新启动。",
+  "plugin_backup_open_backup_folder": "打开备份文件夹",
   "plugin_calculator_copy_result": "复制(不带千分位)",
   "plugin_calculator_copy_result_with_thousands_separator": "复制",
   "plugin_calculator_recalculate": "重新计算",
